--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Lines of Code (LoC)}
 \begin{document}
 
-\plush{\lnTitlePage{1}{24}{q9Gr2xguP5I}}
+\lnTitlePage{1}{24}{q9Gr2xguP5I}
 
 \lnThought{Quality of code means \ul{maintainability}: how quickly other programmers can understand your code.}
 
