--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Cyclomatic Complexity}
 \begin{document}
 
-\plush{\lnTitlePage{2}{24}{Cvv0Olx4Bpw}}
+\lnTitlePage{2}{24}{Cvv0Olx4Bpw}
 
 \lnQuote
   [Trevor Foucher]
