--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -26,7 +26,7 @@
 \newcommand*\thetitle{Cognitive Complexity}
 \begin{document}
 
-\plush{\lnTitlePage{3}{24}{oRUux3w4rsc}}
+\lnTitlePage{3}{24}{oRUux3w4rsc}
 
 \lnThought{Cyclomatic complexity is highly inaccurate if being compared with code readability evaluated by a human.}
 
