--- a/04-halstead-complexity/04-halstead-complexity.tex
+++ b/04-halstead-complexity/04-halstead-complexity.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Halstead Complexity}
 \begin{document}
 
-\plush{\lnTitlePage{4}{24}{YsGzjv0hgcc}}
+\lnTitlePage{4}{24}{YsGzjv0hgcc}
 
 \lnQuote
   {maurice-halstead}
