--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -27,7 +27,7 @@
 \newcommand*\thetitle{CAMC and NHD}
 \begin{document}
 
-\plush{\lnTitlePage{9}{24}{oCxJ_YSSAGo}}
+\lnTitlePage{9}{24}{oCxJ_YSSAGo}
 
 \lnQuote
   {philippe-kruchten}
