--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -27,7 +27,7 @@
 \newcommand*\thetitle{Object Dimensions}
 \begin{document}
 
-\plush{\lnTitlePage{10}{24}{jdEFoz-OQ44}}
+\lnTitlePage{10}{24}{jdEFoz-OQ44}
 
 \lnPitch{
 \pptBanner{Object Metrics}
