--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -30,7 +30,7 @@
 % read this, it's one of the most recent:
 % https://www.computer.org/csdl/proceedings-article/icse/2024/021700b006/1V5BlfnaOpG
 
-\plush{\lnTitlePage{11}{24}{ynPTEzDTutc}}
+\lnTitlePage{11}{24}{ynPTEzDTutc}
 
 \lnQuote
   [Edward Yourdon]
