--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -27,7 +27,7 @@
 \newcommand*\thetitle{Dead Code}
 \begin{document}
 
-\plush{\lnTitlePage{12}{24}{zN0gX9m6a2k}}
+\lnTitlePage{12}{24}{zN0gX9m6a2k}
 
 \pptBanner{Motivating Example}
 \begin{multicols}{2}
