--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -26,7 +26,7 @@
 \newcommand*\thetitle{Code Churn}
 \begin{document}
 
-\plush{\lnTitlePage{13}{24}{dvuyJ5LvHvQ}}
+\lnTitlePage{13}{24}{dvuyJ5LvHvQ}
 
 \lnPitch{
   \pptBanner{History of Version Control Systems (VCS)}
