--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Code Coverage}
 \begin{document}
 
-\plush{\lnTitlePage{15}{24}{pJrXQ5rptig}}
+\lnTitlePage{15}{24}{pJrXQ5rptig}
 
 \pptBanner{Example, Part I}
 \begin{multicols}{2}
