--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Comments Density}
 \begin{document}
 
-\plush{\lnTitlePage{19}{24}{4_SNhBeyato}}
+\lnTitlePage{19}{24}{4_SNhBeyato}
 
 \lnQuote
   [Brian Kernighan]
