--- a/21-builds/21-builds.tex
+++ b/21-builds/21-builds.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Builds}
 \begin{document}
 
-\plush{\lnTitlePage{21}{24}{QQUda0fAcxE}}
+\lnTitlePage{21}{24}{QQUda0fAcxE}
 
 \lnQuote
   [Grady Booch]
