--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Code Style}
 \begin{document}
 
-\plush{\lnTitlePage{22}{24}{hPZGoEAXwY0}}
+\lnTitlePage{22}{24}{hPZGoEAXwY0}
 
 \pptBanner{Which One \ul{Looks} Better for You?}
 \begin{pptWide}{3}
