--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Static Analysis}
 \begin{document}
 
-\plush{\lnTitlePage{23}{24}{QK2XQvYoEpQ}}
+\lnTitlePage{23}{24}{QK2XQvYoEpQ}
 
 \lnQuote
   [Steven Johnson]
