--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Maintainability Index}
 \begin{document}
 
-\plush{\lnTitlePage{5}{24}{xnSnPfVkmkM}}
+\lnTitlePage{5}{24}{xnSnPfVkmkM}
 
 \plush{\pptPic{.6}{wtfs.png}}
 
