--- a/06-coupling/06-coupling.tex
+++ b/06-coupling/06-coupling.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Coupling}
 \begin{document}
 
-\plush{\lnTitlePage{6}{24}{G0vN6Ah8-js}}
+\lnTitlePage{6}{24}{G0vN6Ah8-js}
 
 \lnQuote
   [Larry L. Constantine]
