--- a/07-LCOM/07-LCOM.tex
+++ b/07-LCOM/07-LCOM.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{LCOM 1, 2, 3, 4, 5, ...}
 \begin{document}
 
-\plush{\lnTitlePage{7}{24}{74YigDo8_BE}}
+\lnTitlePage{7}{24}{74YigDo8_BE}
 
 \lnQuote
   [Larry Constantine]
