--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -26,7 +26,7 @@
 \newcommand*\thetitle{TCC and LCC}
 \begin{document}
 
-\plush{\lnTitlePage{8}{24}{JOKxjpAglFU}}
+\lnTitlePage{8}{24}{JOKxjpAglFU}
 
 \lnQuote
   {socrates}
