--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Tech Debt}
 \begin{document}
 
-\plush{\lnTitlePage{14}{24}{pvZDcytPU3w}}
+\lnTitlePage{14}{24}{pvZDcytPU3w}
 
 \lnQuote
   [Ward Cunningham]
