--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -110,7 +110,7 @@ end
   \lnSource{berry1985style}
   \par\columnbreak\par
   ``An individual score for each metric is determined by reference to the value in this table for
-    \begin{enumerate}\setlength\itemsep{-.5em}
+    \begin{enumerate}[topsep=0pt]\setlength\itemsep{-.5em}
       \item the point $L$, below which no score is obtained;
       \item the point $S$, the start of the ``ideal'' range for the metric;
       \item the point $F$, the end of the ideal range;
